--- a/JxUnity/GamePlay/JxUnity.GamePlay.asmdef
+++ b/JxUnity/GamePlay/JxUnity.GamePlay.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "JxUnity.Media",
-        "JxUnity.Basic"
+        "JxUnity.Basic",
+        "JxUnity.Ugui"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
