--- a/JxUnity/Platforms/JxUnity.Platforms.asmdef
+++ b/JxUnity/Platforms/JxUnity.Platforms.asmdef
@@ -1,11 +1,7 @@
 {
-    "name": "JxUnity.GamePlay",
+    "name": "JxUnity.Platforms",
     "rootNamespace": "",
-    "references": [
-        "JxUnity.Media",
-        "JxUnity.Ugui",
-        "JxUnity.Partten"
-    ],
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
