--- a/JxUnity/Mods/JxUnity.Mods.asmdef
+++ b/JxUnity/Mods/JxUnity.Mods.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "JxUnity.Mods",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "JxUnity.Partten"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
